--- a/index.html
+++ b/index.html
@@ -46,13 +46,17 @@
                 <!-- Первая строка -->
                 <tr>
                     <td>
+                        
                         <div class="game">
-                            <img src="images/game1.png" alt="Игра 1">
-                            <img src="magnifier-icon.png" alt="Лупа" class="zoom-icon" id="zoomIcon" data-large="images/game1.png">
+                            <div class="image-container">
+                                <img src="images/game1.png" alt="Игра 1" class="thumbnail">
+                                <img src="images/zoom.png" alt="Лупа" class="zoom-icon" id="zoomIcon" data-large="images/game1.png">
+                            </div>
                             <h3>Игра 1</h3>
                             <p>Описание игры 1. Цена: 500 руб.</p>
                             <button>Купить</button>
                         </div>
+                        
                     </td>
                     <td>
                         <div class="game">
