--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="add_product.html">Добавить товар</a></li>
                 <li><a href="faq.html">FAQ</a></li>
-                <li><a href="#contact">Контакты</a></li>
+                <li><a href="about.html">Об авторе</a></li>
                 <li><a href="modal.html">modal</a></li>
             </ul>
         </nav>
