--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="cart.html">Корзина</a></li>
-                <li><a href="#contact">Контакты</a></li>
+                <li><a href="about.html">Об авторе</a></li>
             </ul>
         </nav>
     </header>
