--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Часто задаваемые вопросы</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -12,10 +12,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="games.html">Игры</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="cart.html">Корзина</a></li>
                 <li><a href="faq.html">FAQ</a></li> <!-- Добавленная ссылка на FAQ -->
-                <li><a href="#contact">Контакты</a></li>
+                <li><a href="about.html">Об авторе</a></li>
             </ul>
         </nav>
     </header>
