--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <li><a href="add_product.html">Добавить товар</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="about.html">Об авторе</a></li>
-                <li><a href="modal.html">modal</a></li>
             </ul>
         </nav>
 
@@ -47,13 +46,13 @@
                 <tr>
                     <td>
                         
-                        <div class="game">
+                        <div class="game" data-url="products/product1.html">
                             <div class="image-container">
-                                <img src="images/game1.png" alt="Игра 1" class="thumbnail">
-                                <img src="images/zoom.png" alt="Лупа" class="zoom-icon" id="zoomIcon" data-large="images/game1.png">
+                                <img src="images/product1_1.jpg" alt="Игра 1" class="thumbnail">
                             </div>
-                            <h3>Игра 1</h3>
-                            <p>Описание игры 1. Цена: 500 руб.</p>
+                            <h3>GTA V</h3>
+                            <p>Шутер, мультиплеер.
+                                Цена: 1000 руб.</p>
                             <button>Купить</button>
                         </div>
                         
@@ -129,60 +128,6 @@
                         </div>
                     </td>
                 </tr>
-                <!-- Четвертая строка -->
-                <tr>
-                    <td>
-                        <div class="game">
-                            <img src="images/game10.jpg" alt="Игра 10">
-                            <h3>Игра 10</h3>
-                            <p>Описание игры 10. Цена: 550 руб.</p>
-                            <button>Купить</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="game">
-                            <img src="images/game11.jpg" alt="Игра 11">
-                            <h3>Игра 11</h3>
-                            <p>Описание игры 11. Цена: 720 руб.</p>
-                            <button>Купить</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="game">
-                            <img src="images/game12.jpg" alt="Игра 12">
-                            <h3>Игра 12</h3>
-                            <p>Описание игры 12. Цена: 600 руб.</p>
-                            <button>Купить</button>
-                        </div>
-                    </td>
-                </tr>
-                <!-- Пятая строка -->
-                <tr>
-                    <td>
-                        <div class="game">
-                            <img src="images/game13.jpg" alt="Игра 13">
-                            <h3>Игра 13</h3>
-                            <p>Описание игры 13. Цена: 800 руб.</p>
-                            <button>Купить</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="game">
-                            <img src="images/game14.jpg" alt="Игра 14">
-                            <h3>Игра 14</h3>
-                            <p>Описание игры 14. Цена: 950 руб.</p>
-                            <button>Купить</button>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="game">
-                            <img src="images/game15.jpg" alt="Игра 15">
-                            <h3>Игра 15</h3>
-                            <p>Описание игры 15. Цена: 670 руб.</p>
-                            <button>Купить</button>
-                        </div>
-                    </td>
-                </tr>
             </tbody>
         </table>
     </section>    
@@ -192,7 +137,7 @@
 
     <footer>
         <h2 id="contact">Контакты</h2>
-        <p>Email: support@gamesstore.com</p>
+        <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
