style and add summ cart

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Часто задаваемые вопросы</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/faq.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     </header>
     <main>
     <section id="faq">
-        <h2>Вопросы и ответы</h2>
+        <h2 id="H2">Вопросы и ответы</h2>
         <div class="faq-item">
             <h3>1. Как купить игру?</h3>
             <p>Чтобы купить игру, добавьте её в корзину и перейдите к оформлению заказа.</p>
@@ -44,10 +44,10 @@
     <button id="scrollTop" title="Наверх">↑</button>
     <script src="js\faq.js"></script>
 </main>
-    <footer>
-        <h2 id="contact">Контакты</h2>
-        <p>Email: support@gamesstore.com</p>
-        <p>Телефон: +7 (123) 456-78-90</p>
-    </footer>
+<footer>
+    <h2 id="contact">Контакты</h2>
+    <p>Email: support@wingmanstore.com</p>
+    <p>Телефон: +7 (123) 456-78-90</p>
+</footer>
 </body>
 </html>
