buy from product page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             </div>
                             <h3>Minecraft</h3>
                             <p> Кубический мир для настоящих творцов.
-                                Жанры: Песочница, открытый мир..
+                                Жанры: Песочница, открытый мир.
                                  Цена: 2000 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
