--- a/products/product2.html
+++ b/products/product2.html
@@ -13,7 +13,7 @@
             <img id="modalImage" src="" alt="Увеличенное изображение">
         </div>
 
-        <div class="container">
+        <div class="container" id="game">
             <a href="#" class="back-button" onclick="history.back(); return false;">← Назад</a>
             <div class="product-header">
                 <h1>Minecraft</h1>
