--- a/catalog.html
+++ b/catalog.html
@@ -43,56 +43,60 @@
             <div class="game" data-url="products/product1.html">
                 <img src="images/product1_1.jpg" alt="Игра 1" class="game-thumbnail">
                 <div class="game-info">
-                    <h3>Игра 1</h3>
-                    <p>Описание игры 1.</p>
-                    <p>Жанр: Экшен, Приключения</p>
-                    <p>Цена: 500 руб.</p>
+                    <h3>GTA V</h3>
+                    <p>Кооп-шутер с элементами криминалистики.</p>
+                    <p>Жанр: Шутер, мультиплеер</p>
+                    <p>Цена: 1000 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
             <div class="game" data-url="products/product2.html">
                 <img src="images/product2_1.jpg" alt="Игра 2" class="game-thumbnail">
                 <div class="game-info">
-                    <h3>Игра 1</h3>
-                    <p>Описание игры 1.</p>
-                    <p>Жанр: Экшен, Приключения</p>
+                    <h3>Minecraft</h3>
+                    <p>Кубический мир для настоящих творцов.</p>
+                    <p>Жанр: Песочница, открытый мир</p>
+                    <p>Цена: 2000 руб.</p>
+                </div>
+                <button class="buy-button">Купить</button>
+            </div>
+            <div class="game" data-url="products/product2.html">
+                <img src="images/product3_1.jpg" alt="Игра 3" class="game-thumbnail">
+                <div class="game-info">
+                    <h3>Dota 2</h3>
+                    <p>Волшебные баталии за трон.</p>
+                    <p>Жанр: MOBA</p>
                     <p>Цена: 500 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
             <div class="game" data-url="products/product2.html">
-                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <img src="images/product4_1.jpg" alt="Игра 4" class="game-thumbnail">
                 <div class="game-info">
-                    <h3>Игра 3</h3>
-                    <p>Описание игры 3. Цена: 600 руб.</p>
-                    <p><strong>Жанр:</strong> Стратегии</p>
+                    <h3>Counter Strike 2</h3>
+                    <p>Многопользовательский шутер от первого лица.</p>
+                    <p>Жанр: Шутер, мультиплеер</p>
+                    <p>Цена: 1500 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
             <div class="game" data-url="products/product2.html">
-                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <img src="images/product5_1.jpg" alt="Игра 5" class="game-thumbnail">
                 <div class="game-info">
-                    <h3>Игра 3</h3>
-                    <p>Описание игры 3. Цена: 600 руб.</p>
-                    <p><strong>Жанр:</strong> Стратегии</p>
+                    <h3>Apex legends</h3>
+                    <p>Королевская битва в мире будущего от первого лица.</p>
+                    <p>Жанр: Шутер, королевская битва</p>
+                    <p>Цена: 1000 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
             <div class="game" data-url="products/product2.html">
-                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
+                <img src="images/product6_1.jpg" alt="Игра 6" class="game-thumbnail">
                 <div class="game-info">
-                    <h3>Игра 3</h3>
-                    <p>Описание игры 3. Цена: 600 руб.</p>
-                    <p><strong>Жанр:</strong> Стратегии</p>
-                </div>
-                <button class="buy-button">Купить</button>
-            </div>
-            <div class="game" data-url="products/product2.html">
-                <img src="images/game3.jpg" alt="Игра 3" class="game-thumbnail">
-                <div class="game-info">
-                    <h3>Игра 3</h3>
-                    <p>Описание игры 3. Цена: 600 руб.</p>
-                    <p><strong>Жанр:</strong> Стратегии</p>
+                    <h3>Overwatch</h3>
+                    <p>Фантастический команды шутер от первого лица.</p>
+                    <p>Жанр: Шутер, мультиплеер</p>
+                    <p>Цена: 1500 руб.</p>
                 </div>
                 <button class="buy-button">Купить</button>
             </div>
