--- a/index.html
+++ b/index.html
@@ -33,11 +33,6 @@
         <p id="H2">Здесь вы найдете лучшие компьютерные игры по самым низким ценам!</p>
     </section>
 
-    <div class="modal" id="imageModal">
-        <span class="close" id="closeModal">&times;</span>
-        <img id="modalImage" src="" alt="Увеличенное изображение">
-    </div>
-
     <section id="games">
         <h2 id="H2">НАШИ ТОВАРЫ</h2>
         <table id="gamesTable">
@@ -70,11 +65,12 @@
                     <td>
                         <div class="game" data-url="products/product2.html">
                             <div class="image-container">
-                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                                <img src="images/product3_1.jpg" alt="Игра 3" class="thumbnail">
                             </div>
-                            <h3>Игра 3</h3>
-                            <p>Описание игры 3. 
-                                Цена: 600 руб.</p>
+                            <h3>Dota 2</h3>
+                            <p>Волшебные баталии за трон.
+                                Жанры: MOBA.
+                                Цена: 500 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
@@ -83,33 +79,36 @@
                     <td>
                         <div class="game" data-url="products/product2.html">
                             <div class="image-container">
-                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                                <img src="images/product4_1.jpg" alt="Игра 4" class="thumbnail">
                             </div>
-                            <h3>Игра 4</h3>
-                            <p>Описание игры 4. 
-                                Цена: 550 руб.</p>
+                            <h3>Counter Strike 2</h3>
+                            <p>Многопользовательский шутер от первого лица.
+                                Жанры: Шутер, мультиплеер.
+                                Цена: 1500 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
                     <td>
                         <div class="game" data-url="products/product2.html">
                             <div class="image-container">
-                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                                <img src="images/product5_1.jpg" alt="Игра 5" class="thumbnail">
                             </div>
-                            <h3>Игра 5</h3>
-                            <p>Описание игры 5. 
-                                Цена: 800 руб.</p>
+                            <h3>Apex legends</h3>
+                            <p>Королевская битва в мире будущего от первого лица.
+                                Жанры: Шутер, королевская битва.
+                                Цена: 1000 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
                     <td>
                         <div class="game" data-url="products/product2.html">
                             <div class="image-container">
-                                <img src="images/product2_1.jpg" alt="Игра 2" class="thumbnail">
+                                <img src="images/product6_1.jpg" alt="Игра 6" class="thumbnail">
                             </div>
-                            <h3>Игра 6</h3>
-                            <p>Описание игры 6. 
-                                Цена: 650 руб.</p>
+                            <h3>Overwatch</h3>
+                            <p>Фантастический команды шутер от первого лица.
+                                Жанры: Шутер, мультиплеер.
+                                Цена: 1500 руб.</p>
                             <button class="buy-button">Купить</button>
                         </div>
                     </td>
