--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Каталог</title>
+    <title>WINGMAN SHOP Каталог</title>
     <link rel="stylesheet" href="css/catalog.css">
 </head>
 <body>
