--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Магазин Компьютерных Игр</title>
+    <title>WINGMAN SHOP</title>
     <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
+    
     <header>
         <img src="images/logo.jpg" alt="Логотип" class="logo">
         <h1>WINGMAN SHOP</h1>
@@ -121,10 +122,11 @@
     <button id="scrollTop" title="Наверх">↑</button>
     <script src="js\main.js"></script>
 </main>
-</body>
 <footer>
     <h2 id="contact">Контакты</h2>
     <p>Email: support@wingmanstore.com</p>
     <p>Телефон: +7 (123) 456-78-90</p>
 </footer>
+</body>
+
 </html>
