--- a/products/product1.html
+++ b/products/product1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товар - GTA V</title>
+    <title>WINGMAN SHOP Товар - GTA V</title>
     <link rel="stylesheet" href="product1.css">
 </head>
 <body>
