--- a/products/product2.html
+++ b/products/product2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товар - Minecraft</title>
+    <title>WINGMAN SHOP Товар - Minecraft</title>
     <link rel="stylesheet" href="product2.css">
 </head>
 <body>
