--- a/products/product2.html
+++ b/products/product2.html
@@ -56,9 +56,9 @@
             </div>
             <div class="genres">
                 <h2>Жанры:</h2>
-                <p><span>Песочница</span></p>
-                <p><span>Кооператив</span></p>
-                <p><span>Открытый мир</span></p>
+                <p>Песочница</p>
+                <p>Кооператив</p>
+                <p>Открытый мир</p>
             </div>
             <div class="buy-section">
                 <button id="buyButton" class="buy-button">Купить</button>
